--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang=pt_br>
 
 <head>
+  <link rel="stylesheet" href="reset.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
@@ -9,13 +10,79 @@
 </head>
 
 <body>
-  
   <script src="script.js"></script>
+  <header>
+    <br>
+    <h1>Gabriel Ribeiro</h1>
+    <br>
 
- <!--
+    <a href='#sobre'>Sobre</a>
+    <a href='#educacao'>Formação</a>
+    <a href='#contatos'>Contatos</a>
+
+    <br>
+    <br>
+    <img src="assets/foto de perfil.jpeg" width="80" class="perfil">
+    <br>
+
+    <br>
+
+    <br>
+
+  </header>
+
+  <h2>Sobre</h2>
+  <br>
+  <article id='sobre'>
+    <p>
+      Atualmente estou cursando Análise e Desenvolvimento de Sistemas no Instituto Infnet. <br> Sou apaixonado por
+      tecnologia, curto novas experiências e desafios, me considero bem atencioso<br> em meus afazeres, entrego o meu
+      máximo
+      naquilo que amo que e aprender a programar.
+    </p>
+  </article>
+
+  <br>
+  <br>
+
+
+  <section>
+    <h3 id="educacao">Formação</h3><br>
+    <p>
+      Instituto Infnet - Análise e Desenvolvimento de Sistemas - (2022-2025)
+    </p>
+  </section>
+  <br>
+
+  <footer id="contatos">
+    <br>
+    <h4>Contatos</h4>
+    <br>
+    <nav class="icones">
+      <p>
+        <a href="mailto:gabriels.ribeiro@al.infnet.edu.br" target="_blank">
+          <img src="assets/envelope-solid.svg" width="50">
+        </a>
+
+        <a href="https://www.linkedin.com/in/gabriel-ribeiro-6353911b9/" target="_blank">
+          <img src="assets/linkedin-brands.svg" width="50">
+        </a>
+
+        <a href="https://github.com/gabrielsribeiro" target="_blank">
+          <img src="assets/github-alt-brands.svg" width="50">
+        </a>
+
+        <a href="https://api.whatsapp.com/send?phone=5521988906409" target="_blank">
+          <img src="assets/whatsapp-brands.svg" width="50">
+        </a>
+      </p>
+
+    </nav>
+  </footer>
+  <!--
 This script places a badge on your repl's full-browser view back to your repl's cover page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green, teal, blue, blurple, magenta, pink!
 -->
-<script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
+  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script>
 </body>
 
 </html>
